--- a/src/app/components/currency-converter/currency-converter.component.html
+++ b/src/app/components/currency-converter/currency-converter.component.html
@@ -1,74 +1,89 @@
+<div class="container text-center">
+  <h2 class="m-5">Currency Converter</h2>
 
-<h3 class="text-md-center m-5">Currency Converter</h3>
-
-<div class="m-5 d-grid gap-3">
-    <form>
-        <div class="row">
-            <div class="col">
-                <div class="form-floating">
-                    <input placeholder="Amount" class="form-control" />
-                    <label class="text-primary form-label">Amount</label>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <select class="select" id="fromCurrencySelect" name="fromCurrencySelect" [(ngModel)]="currencyInput.fromCurrency">
-                    <option *ngFor="let currency of supportedCurrencies" [value]="currency">{{ currency }}</option>
-                </select>
-            </div>
-            <div class="col"> 
-                <select class="select" id="toCurrencySelect" name="toCurrencySelect" [(ngModel)]="currencyInput.toCurrency">
-                    <option *ngFor="let currency of supportedCurrencies" [value]="currency">{{ currency }}</option>
-                </select>
-            </div>
-        </div>
-
-    </form>
-    
-    <div class="row">
-        <div class="col"> Amount </div>
-        <div class="col"> From - To </div>
-        <div class="col"> Date </div>
-    </div>
-
-
-    <div class="currency-converter">
-        <h2>Currency Converter</h2>
-      
-        <div class="input-group">
-          <label for="amount">Amount:</label>
-          <input type="number" id="amount" [(ngModel)]="currencyInput.amount" name="amount" min="0.01" step="0.01">
-        </div>
-      
-        <div class="input-group">
-          <label for="fromCurrency">From Currency:</label>
-          <select id="fromCurrency" [(ngModel)]="currencyInput.fromCurrency" name="fromCurrency">
-            <option *ngFor="let currency of supportedCurrencies" [value]="currency">{{ currency }}</option>
-          </select>
-        </div>
-      
-        <div class="input-group">
-          <label for="toCurrency">To Currency:</label>
-          <select id="toCurrency" [(ngModel)]="currencyInput.toCurrency" name="toCurrency">
-            <option *ngFor="let currency of supportedCurrencies" [value]="currency">{{ currency }}</option>
-          </select>
-        </div>
-      
-        <div class="input-group">
-          <label for="conversionDate">Conversion Date (Optional):</label>
-          <input type="date" id="conversionDate" [(ngModel)]="currencyInput.conversionDate" name="conversionDate">
-        </div>
-      
-        <button (click)="convertCurrency()">Convert</button>
-      
-        <!-- Display the conversion result here -->
-        <div>
-          {{exchangeAmount.toFixed(4)}}
-        </div>
-      </div>
-</div>
-
-
-
+  <div class="container">
+    <form id="currencyConvertForm">
+      <div class="container">
   
+        <div class="row mb-3">
+          <div class="col">
+            <div class="form-floating">
+              <input class="form-control" type="date" id="conversionDate" [(ngModel)]="currencyInput.conversionDate"
+                name="conversionDate" (change)='onChangeConversionDate($event)'>
+              <label class="text-primary form-label" for="conversionDate">Date</label>
+            </div>
+          </div>
+        </div>
+  
+        <div class="row mb-3">
+          <div class="col-md-6">
+            <div class="form-floating">
+              <input class="form-control" placeholder="Amount" type="number" id="amount"
+                [(ngModel)]="currencyInput.amount" name="amount" min="0" step="0.01" (keyup)='onKeyUpFromAmount($event)'>
+              <label class="text-primary form-label" for="amount">Amount</label>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-floating">
+              <select class="form-control" id="fromCurrency" [(ngModel)]="currencyInput.fromCurrency" name="fromCurrency"
+                [disabled]="isDisableFrom" (change)='onChangeFromCurrency($event)'>
+                <option *ngFor="let currency of supportedCurrencies" [value]="currency">{{ currency }}</option>
+              </select>
+              <label class="text-primary form-label" for="fromCurrency">From</label>
+            </div>
+          </div>
+        </div>
+  
+        <div class="row mb-3">
+          <div class="col">
+            <div class="text-md-center">
+              <button class="btn btn-secondary" (click)="switchCurrency()">Switch</button>
+            </div>
+          </div>
+        </div>
+  
+        <div class="row mb-3">
+          <div class="col-md-6">
+            <div class="form-floating">
+              <input class="form-control" placeholder="Amount" type="number" id="convertedAmount"
+                [(ngModel)]="this.currencyOutput.amount" name="convertedAmount" disabled />
+              <label class="text-primary form-label" for="convertedAmount">Amount</label>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-floating">
+              <select class="form-control" id="toCurrency" [(ngModel)]="currencyInput.toCurrency" name="toCurrency"
+                [disabled]="isDisableTo" (change)='onChangeToCurrency($event)'>
+                <option *ngFor="let currency of supportedCurrencies" [value]="currency">{{ currency }}</option>
+              </select>
+              <label class="text-primary form-label" for="toCurrency">To</label>
+            </div>
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col">
+            <div class="text-md-center">
+              Exchange Rate: {{ this.currencyOutput.exchangeRate }}
+            </div>
+          </div>
+        </div>
+  
+        <div class="row mb-3">
+          <div class="col">
+            <div class="text-md-center">
+              <button class="btn btn-primary" (click)="convertCurrency()">Convert</button>
+            </div>
+          </div>
+        </div>
+  
+        <ng-container *ngIf="errorMessage">
+          <div class="text-danger">
+            {{errorMessage}}
+          </div>
+        </ng-container>
+        
+      </div>
+    </form>
+  </div>
+</div>
